--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@capacitor/assets": "^2.0.4",
     "@capacitor/cli": "5.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
